--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -1,7 +1,7 @@
 .contactusheroimage{
     position: absolute;
     top: 0px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/contactusimage2.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/three.jpg");
     height: 50%;
     width: 100%;
     left: 0;
